apps/bookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf
  namespace: media
spec:
  selector:
    app: bookshelf
  ports:
    - port: 8787
      targetPort: 8787
